# mouse-without-borders-clone

./: .gitignore  README.md  pyproject.toml
.mwbc/: config.json
scripts/: windows-host.cmd
src/mwbc/: __init__.py  cli.py  clipboard.py  config.py  controller.py  dashboard.py  geometry.py  input_backend.py  logging_utils.py  network.py  protocol.py  startup.py  state.py
tests/: test_cli.py  test_controller.py  test_dashboard.py  test_geometry.py  test_input_backend.py  test_network.py  test_protocol.py  test_startup.py
