[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mouse-without-borders-clone"
version = "0.1.0"
description = "A small LAN keyboard and mouse sharing daemon inspired by Mouse Without Borders."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Local Codex" }]
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
input = ["pynput>=1.7.7"]
dev = ["pytest>=8.0"]

[project.scripts]
mwbc = "mwbc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

